--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/SaveForLaterPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/SaveForLaterPage.scala.html
@@ -17,7 +17,7 @@
 @import uk.gov.hmrc.agentregistrationfrontend.config.AppConfig
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.routes
+@import arf.routes
 
 
 @this(
