--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/TypeOfSignInPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/TypeOfSignInPage.scala.html
@@ -18,7 +18,7 @@
 @import uk.gov.hmrc.govukfrontend.views.Implicits.RichRadios
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.forms.TypeOfSignInForm
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.aboutyourbusiness.routes
+@import arf.aboutyourbusiness.routes
 
 @this(
         layout: Layout,
