--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsSupervisoryBodyPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsSupervisoryBodyPage.scala.html
@@ -16,7 +16,7 @@
 
 @import uk.gov.hmrc.govukfrontend.views.Implicits.RichSelect
 @import uk.gov.hmrc.hmrcfrontend.views.viewmodels.accessibleautocomplete.AccessibleAutocomplete
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.amls.routes
+@import arf.amls.routes
 @import uk.gov.hmrc.agentregistrationfrontend.config.AmlsCodes
 @import uk.gov.hmrc.agentregistrationfrontend.forms.AmlsCodeForm
 @import uk.gov.hmrc.agentregistration.shared.AmlsCode
