--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/CheckYourAnswersPage.scala.html
@@ -15,8 +15,8 @@
  *@
 
 @import uk.gov.hmrc.govukfrontend.views.html.components._
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.applicantcontactdetails.routes
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.routes as applicationRoutes
+@import arf.applicantcontactdetails.routes
+@import arf.routes as applicationRoutes
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
 @import uk.gov.hmrc.agentregistration.shared.ApplicantRoleInLlp
