--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
@@ -15,8 +15,8 @@
  *@
 
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.applicantcontactdetails.routes as applicantRoutes
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.amls.routes as amlsDetailsRoutes
+@import arf.applicantcontactdetails.routes as applicantRoutes
+@import arf.amls.routes as amlsDetailsRoutes
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 
 @this(
