--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/BusinessTypeSessionPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/BusinessTypeSessionPage.scala.html
@@ -16,7 +16,7 @@
 
 @import uk.gov.hmrc.agentregistrationfrontend.model.BusinessTypeAnswer
 @import uk.gov.hmrc.agentregistrationfrontend.forms.BusinessTypeSessionForm
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.aboutyourbusiness.routes
+@import arf.aboutyourbusiness.routes
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits.RichRadios
 
