--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsExpiryDatePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsExpiryDatePage.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @import uk.gov.hmrc.agentregistration.shared.AmlsRegistrationNumber
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.amls.routes
+@import arf.amls.routes
 @import uk.gov.hmrc.agentregistrationfrontend.forms.AmlsExpiryDateForm
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
