--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsRegistrationNumberPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsRegistrationNumberPage.scala.html
@@ -17,7 +17,7 @@
 @import uk.gov.hmrc.govukfrontend.views.Implicits._
 @import uk.gov.hmrc.agentregistration.shared.AmlsRegistrationNumber
 @import uk.gov.hmrc.agentregistrationfrontend.forms.AmlsRegistrationNumberForm
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.amls.routes
+@import arf.amls.routes
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
 
