--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/MatchedMembersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/MatchedMembersPage.scala.html
@@ -17,7 +17,7 @@
 @import uk.gov.hmrc.agentregistration.shared.contactdetails.CompaniesHouseOfficer
 @import uk.gov.hmrc.agentregistration.shared.contactdetails.CompaniesHouseDateOfBirth
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.applicantcontactdetails.routes
+@import arf.applicantcontactdetails.routes
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits.RichRadios
