APB-10179 Centralised Routes
Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/AgentTypePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/AgentTypePage.scala.html
@@ -16,7 +16,6 @@
 
 @import uk.gov.hmrc.agentregistration.shared.AgentType
 @import uk.gov.hmrc.agentregistrationfrontend.forms.AgentTypeForm
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.apply.aboutyourbusiness.routes
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits.RichRadios
 
@@ -38,7 +37,7 @@
     maybeForm = Some(form)
 ) {
     <h2 class="govuk-caption-l">@messages("about-your-business.title")</h2>
-    @formWithCSRF(action = routes.AgentTypeController.submit) {
+    @formWithCSRF(action = CentralisedRoutes.apply.aboutyourbusiness.AgentTypeController.submit) {
         @govukRadios(Radios(
             fieldset = Some(Fieldset(
                 legend = Some(Legend(
