--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/SaveForLaterPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/SaveForLaterPage.scala.html
@@ -18,7 +18,6 @@
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.controllers.routes
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.apply.routes as applyRoutes
 
 
 @this(
@@ -52,7 +51,7 @@
     </ol>
     <p class="govuk-body">
         <a class="govuk-link" href="@{
-            applyRoutes.TaskListController.show.url
+            CentralisedRoutes.apply.TaskListController.show.url
         }">@messages(s"$key.continueLink")</a>
     </p>
     <p class="govuk-body">
