--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
@@ -15,8 +15,6 @@
  *@
 
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.apply.applicantcontactdetails.routes as applicantRoutes
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.apply.amls.routes as amlsDetailsRoutes
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 
 @this(
@@ -93,7 +91,7 @@
                     content = Text(messages(s"$key.contact.linkText"))
                 ),
                 status = contactStatus,
-                href = Some(applicantRoutes.CheckYourAnswersController.show.url)
+                href = Some(CentralisedRoutes.apply.amls.CheckYourAnswersController.show.url)
             )
         ),
         idPrefix = "contact"
@@ -121,7 +119,7 @@
                     content = Text(messages(s"$key.hmrcStandards.amls.linkText"))
                 ),
                 status = amlsStatus,
-                href = Some(amlsDetailsRoutes.CheckYourAnswersController.show.url)
+                href = Some(CentralisedRoutes.apply.amls.CheckYourAnswersController.show.url)
             ),
             TaskListItem(
                 title = TaskListItemTitle(
