--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/AuthorisedNamePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/AuthorisedNamePage.scala.html
@@ -15,7 +15,6 @@
  *@
 
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.apply.applicantcontactdetails.routes
 @import uk.gov.hmrc.agentregistrationfrontend.forms.AuthorisedNameForm
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
@@ -40,7 +39,7 @@
     maybeForm = Some(form)
 ) {
     <h2 class="govuk-caption-l">@messages("applicant-contact-details.title")</h2>
-    @formWithCSRF(action = routes.AuthorisedNameController.submit) {
+    @formWithCSRF(action = CentralisedRoutes.apply.applicantcontactdetails.AuthorisedNameController.submit) {
         @govukInput(Input(
             label = Label(
               content = Text(title),
