--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/EmailAddressPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/EmailAddressPage.scala.html
@@ -16,7 +16,6 @@
 
 @import uk.gov.hmrc.agentregistration.shared.EmailAddress
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.apply.applicantcontactdetails.routes
 @import uk.gov.hmrc.agentregistrationfrontend.forms.EmailAddressForm
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
@@ -41,7 +40,7 @@
     maybeForm = Some(form)
 ) {
     <h2 class="govuk-caption-l">@messages("applicant-contact-details.title")</h2>
-    @formWithCSRF(action = routes.EmailAddressController.submit) {
+    @formWithCSRF(action = CentralisedRoutes.apply.applicantcontactdetails.EmailAddressController.submit) {
         @govukInput(Input(
             label = Label(
               content = Text(title),
