--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/MatchedMemberPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/MatchedMemberPage.scala.html
@@ -17,7 +17,6 @@
 @import uk.gov.hmrc.agentregistration.shared.contactdetails.CompaniesHouseOfficer
 @import uk.gov.hmrc.agentregistration.shared.contactdetails.CompaniesHouseDateOfBirth
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.apply.applicantcontactdetails.routes
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits.RichRadios
@@ -64,7 +63,7 @@
             s"${officer.name}${makeDateOfBirth(officer.dateOfBirth)}"
         )
     ))
-    @formWithCSRF(action = routes.CompaniesHouseMatchingController.submit) {
+    @formWithCSRF(action = CentralisedRoutes.apply.applicantcontactdetails.CompaniesHouseMatchingController.submit) {
       <input
           type="hidden"
           name="@ChOfficerSelectionFormType.key"
