APB-10179 Centralised Routes
Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/SaveForLaterPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/SaveForLaterPage.scala.html
@@ -51,7 +51,7 @@
     </ol>
     <p class="govuk-body">
         <a class="govuk-link" href="@{
-            CentralisedRoutes.apply.TaskListController.show.url
+            AppRoutes.apply.TaskListController.show.url
         }">@messages(s"$key.continueLink")</a>
     </p>
     <p class="govuk-body">
