--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/BusinessTypeSessionPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/BusinessTypeSessionPage.scala.html
@@ -37,7 +37,7 @@
     maybeForm = Some(form)
 ) {
     <h2 class="govuk-caption-l">@messages("about-your-business.title")</h2>
-    @formWithCSRF(action = CentralisedRoutes.apply.aboutyourbusiness.BusinessTypeSessionController.submit) {
+    @formWithCSRF(action = AppRoutes.apply.aboutyourbusiness.BusinessTypeSessionController.submit) {
         @govukRadios(Radios(
             fieldset = Some(Fieldset(
                 legend = Some(Legend(
