--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadProgressPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadProgressPage.scala.html
@@ -49,19 +49,19 @@
         @status match {
             case s : UploadStatus.UploadedSuccessfully => {
                 @govukButton(Button(
-                  href = Some(CentralisedRoutes.apply.amls.CheckYourAnswersController.show.url),
+                  href = Some(AppRoutes.apply.amls.CheckYourAnswersController.show.url),
                   content = Text(messages("common.continue"))
                 ))
             }
             case UploadStatus.InProgress => {
                 @govukButton(Button(
-                    href = Some(CentralisedRoutes.apply.amls.AmlsEvidenceUploadController.showResult.url),
+                    href = Some(AppRoutes.apply.amls.AmlsEvidenceUploadController.showResult.url),
                     content = Text(messages("common.continue"))
                 ))
             }
           case _ => {
               @govukButton(Button(
-                  href = Some(CentralisedRoutes.apply.amls.AmlsEvidenceUploadController.show.url),
+                  href = Some(AppRoutes.apply.amls.AmlsEvidenceUploadController.show.url),
                   content = Text(messages("common.tryAgain"))
               ))
           }
