--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/CheckYourAnswersPage.scala.html
@@ -53,7 +53,7 @@
         actions = Some(Actions(
             items = Seq(
                 ActionItem(
-                    href = s"${CentralisedRoutes.apply.applicantcontactdetails.ApplicantRoleInLlpController.show}",
+                    href = s"${AppRoutes.apply.applicantcontactdetails.ApplicantRoleInLlpController.show}",
                     content = Text(messages(s"$key.change")),
                     visuallyHiddenText = Some(messages(s"$key.llpMember.label"))
                 )
@@ -63,8 +63,8 @@
 }
 @nameChangeRoute = @{
     contactDetails.applicantName.role match {
-        case ApplicantRoleInLlp.Member => CentralisedRoutes.apply.applicantcontactdetails.MemberNameController.show
-        case ApplicantRoleInLlp.Authorised => CentralisedRoutes.apply.applicantcontactdetails.AuthorisedNameController.show
+        case ApplicantRoleInLlp.Member => AppRoutes.apply.applicantcontactdetails.MemberNameController.show
+        case ApplicantRoleInLlp.Authorised => AppRoutes.apply.applicantcontactdetails.AuthorisedNameController.show
     }}
 @nameRow = @{
     SummaryListRow(
@@ -99,7 +99,7 @@
         actions = Some(Actions(
             items = Seq(
                 ActionItem(
-                    href = s"${CentralisedRoutes.apply.applicantcontactdetails.TelephoneNumberController.show}",
+                    href = s"${AppRoutes.apply.applicantcontactdetails.TelephoneNumberController.show}",
                     content = Text(messages(s"$key.change")),
                     visuallyHiddenText = Some(messages(s"$key.telephone.label"))
                 )
@@ -119,7 +119,7 @@
         actions = Some(Actions(
             items = Seq(
                 ActionItem(
-                    href = s"${CentralisedRoutes.apply.applicantcontactdetails.EmailAddressController.show}",
+                    href = s"${AppRoutes.apply.applicantcontactdetails.EmailAddressController.show}",
                     content = Text(messages(s"$key.change")),
                     visuallyHiddenText = Some(messages(s"$key.email.label"))
                 )
@@ -136,7 +136,7 @@
     @govukSummaryList(SummaryList(rows))
     <p class="govuk-body">
       @govukButton(Button(
-          href = Some(CentralisedRoutes.apply.TaskListController.show.url),
+          href = Some(AppRoutes.apply.TaskListController.show.url),
           content = Text(messages("common.confirmAndContinue"))
       ))
     </p>
