--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/MatchedMembersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/MatchedMembersPage.scala.html
@@ -62,7 +62,7 @@
     maybeForm = Some(form)
 ) {
     <h2 class="govuk-caption-l">@messages("applicant-contact-details.title")</h2>
-    @formWithCSRF(action = CentralisedRoutes.apply.applicantcontactdetails.CompaniesHouseMatchingController.submit) {
+    @formWithCSRF(action = AppRoutes.apply.applicantcontactdetails.CompaniesHouseMatchingController.submit) {
         <input
             type="hidden"
             name="@ChOfficerSelectionFormType.key"
