APB-10184 use new AppRoutes and apply package

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
@@ -105,7 +105,7 @@
                     content = Text(messages(s"$key.accountDetails.linkText"))
                 ),
                 status = agentDetailsStatus,
-                href = if contactIsComplete then Some(agentDetailsRoutes.CheckYourAnswersController.show.url) else None
+                href = if contactIsComplete then Some(AppRoutes.apply.agentdetails.CheckYourAnswersController.show.url) else None
             )
         ),
         idPrefix = "accountDetails"
