--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/agentdetails/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/agentdetails/CheckYourAnswersPage.scala.html
@@ -15,8 +15,6 @@
  *@
 
 @import uk.gov.hmrc.govukfrontend.views.html.components._
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.agentdetails.routes
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.routes as applicationRoutes
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
 
@@ -52,7 +50,7 @@
         actions = Some(Actions(
             items = Seq(
                 ActionItem(
-                    href = s"${routes.AgentBusinessNameController.show}",
+                    href = s"${AppRoutes.apply.agentdetails.AgentBusinessNameController.show}",
                     content = Text(messages("common.change")),
                     visuallyHiddenText = Some(messages(s"$key.businessName.label"))
                 )
@@ -69,7 +67,7 @@
     @govukSummaryList(SummaryList(rows))
     <p class="govuk-body">
       @govukButton(Button(
-          href = Some(applicationRoutes.TaskListController.show.url),
+          href = Some(AppRoutes.apply.TaskListController.show.url),
           content = Text(messages("common.confirmAndContinue"))
       ))
     </p>
